<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <CheckBox
                    android:id="@+id/cbSkills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/skills"/>

                <CheckBox
                    android:id="@+id/cbExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"/>

                <CheckBox
                    android:id="@+id/cbEducation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"/>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/Profile"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginVertical="36dp"
                android:src="@drawable/githubprofile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/royce_christopher_m_abante"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quezon_city_metro_manila" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09123456789" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email" />

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="trainee.psa@email.com" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp">



        <LinearLayout
            android:id="@+id/Work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Work Experience"
                android:textSize="24sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PSA"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2023 - Present" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="• Able to adapt to new technologies and systems" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="• Able to migrate database from old to new system" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="• Able to implement new features and bug fixes" />"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Skills"
                android:textSize="24sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="• Java" />

                <SeekBar
                    android:id="@+id/sbJava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:progress="80" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="• Javascript" />

                <SeekBar
                    android:id="@+id/sbJavascript"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:progress="80" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="• React Native" />

                <SeekBar
                    android:id="@+id/sbReactNative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:clickable="false"
                    android:progress="80" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Education"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Phine Elementary School" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2009 - 2013" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Phine High School" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2013 - 2019" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Philippine University" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2019 - 2023" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
